# gb10_attitude_gen

./: .gitignore  Dockerfile  README.md  app.py  comfy_equivalent.py  docker-compose.yml  download_model.sh  ltx2_backend.py  pyproject.toml  requirements.txt  settings.conf  settings_loader.py
app/: __init__.py  camera.py  cluster.py  config.py  diffusion_worker.py  emotion_classifier.py  face_detection.py  face_segmentation.py  generation_scheduler.py  image_generator.py  main.py  prompt_builder.py  ui.py  web.py
docs/: cluster_accelerated_mind_mirror.md  ltx2_primitives_map.md
scripts/: container_entrypoint.sh  download_models.sh  dual_spark.sh  gpu_shell.sh  patch_ltx2_cache_models.py  patch_ltx2_distilled_cfg.py  prefetch_ltx2.py  single_spark.sh  smoke_test.py
static/: index.html
tests/: test_cluster_config.py
