[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-mood-mirror"
version = "0.1.0"
description = "Webcam-based AI mood mirror demo"
authors = [{ name = "AI", email = "noreply@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python",
    "torch",
    "torchvision",
    "accelerate",
    "mediapipe",
    "transformers",
    "diffusers",
    "numpy",
    "fastapi",
    "uvicorn[standard]",
]

[project.scripts]
ai-mood-mirror = "app.main:main"
ai-mood-mirror-web = "app.web:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app"]
